# movie-rating-service/docs/swagger.json
@@ -256,7 +256,7 @@
                 }
             }
         },
-        "/rating": {
+        "/movie/{id}/rating": {
             "post": {
                 "security": [
                     {
@@ -268,6 +268,13 @@
                 ],
                 "summary": "Create Rating",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Movie Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Rating create payload",
                         "name": "body",
@@ -323,13 +330,11 @@
                 "summary": "Delete Rating",
                 "parameters": [
                     {
-                        "description": "Rating delete payload",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.DeleteRating"
-                        }
+                        "type": "string",
+                        "description": "Movie Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -364,6 +369,13 @@
                 ],
                 "summary": "Update Rating",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Movie Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "Rating update payload",
                         "name": "body",
@@ -582,14 +594,9 @@
         "request.CreateRating": {
             "type": "object",
             "required": [
-                "movie_id",
-                "score",
-                "userID"
+                "score"
             ],
             "properties": {
-                "movie_id": {
-                    "type": "integer"
-                },
                 "review": {
                     "type": "string"
                 },
@@ -597,9 +604,6 @@
                     "type": "number",
                     "maximum": 5,
                     "minimum": 0
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         },
@@ -636,21 +640,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "request.DeleteRating": {
-            "type": "object",
-            "required": [
-                "movie_id",
-                "userID"
-            ],
-            "properties": {
-                "movie_id": {
-                    "type": "integer"
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         },
@@ -699,14 +688,9 @@
         "request.UpdateRating": {
             "type": "object",
             "required": [
-                "movie_id",
-                "score",
-                "userID"
+                "score"
             ],
             "properties": {
-                "movie_id": {
-                    "type": "integer"
-                },
                 "review": {
                     "type": "string"
                 },
@@ -714,9 +698,6 @@
                     "type": "number",
                     "maximum": 5,
                     "minimum": 0
-                },
-                "userID": {
-                    "type": "integer"
                 }
             }
         },
